# ecs-rs

./: AUTHORS.txt  Cargo.toml  LICENSE.md  README.md
doc/: tutorial.md  tutorial1.md  tutorial2.md  tutorial3.md  tutorial4.md  tutorial5.md  tutorials.md
src/: aspect.rs  buffer.rs  component.rs  entity.rs  lib.rs  manager.rs  world.rs
src/manager/: event.rs  group.rs  mod.rs  player.rs
src/system/: data.rs  datasystem.rs  entity.rs  entitysystem.rs  interact.rs  interactsystem.rs  interval.rs  lazy.rs  mod.rs
tests/: general_tests.rs  issue_tests.rs  tutorial_tests.rs
