[package]

name = "ecs"
version = "0.18.2"
authors = [
    "HeroesGrave",
    "Tom Bebbington",
    "Jake Kerr",
]
description = "An Entity Component System (ECS) Framework"
repository = "https://github.com/HeroesGrave/ecs-rs"
homepage = "https://github.com/HeroesGrave/ecs-rs"
license = "MIT"
readme = "README.md"
keywords = [
    "ecs",
    "entity",
    "component",
    "game",
]
